<resources>
    <string name="app_name">CloseApp</string>
    <string name="button_label">button label</string>
    <string name="button">button</string>
    <string name="button_label_1">button label 1</string>
    <string name="button_1">button 1</string>
    <string name="button_label_2">button label 2</string>
    <string name="button_2">button 2</string>
    <string name="button_label_3">button label 3</string>
    <string name="button_3">button 3</string>
    <string name="tv_tools_user_login">Same Login</string>
    <string name="tv_item_tools_user_login">Fish</string>
</resources>